--- a/.gitignore
+++ b/.gitignore
@@ -161,5 +161,4 @@ cython_debug/
 
 data/raw
 data/processed
-src/model/random_forest/pickle_model
-src/model/bag_of_words/pickle_model
+data/preprocessed_amazon_data.csv
